# articubot_one

./: CMakeLists.txt  package.xml  robot_square.py
config/: drive_bot.rviz  view_bot.rviz
description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
launch/: launch_sim.launch.py
